# llama-cpp-rs

./: Cargo.toml
.github/workflows/: llama-cpp-rs-check.yml  publish-upon-release.yml
examples/tool_calling_native/: Cargo.toml  README.md  out
examples/tool_calling_native/src/: main.rs
llama-cpp-2/: Cargo.toml
llama-cpp-2/src/: chat.rs  lib.rs
llama-cpp-2/src/context/: kv_cache.rs
llama-cpp-sys-2/: Cargo.toml  build.rs  chat_wrapper.cpp  chat_wrapper.h  wrapper.h
