[package]
name = "tool_calling_native"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
llama-cpp-2 = { path = "../../llama-cpp-2", features = ["metal"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v4"] }
encoding_rs = "0.8" 